--- a/about.njk
+++ b/about.njk
@@ -3,10 +3,10 @@ layout: base
 brian:
     host: Brian
     list:
-        - <a href="https://koser.us/brian">Personal website</a>
         - I'm compelled to rank everything. And I like to talk.
         - Professional software developer. I build websites professionally and as a hobby.
         - Other hobbies include reading and playing modern board games.
+        - <a href="https://koser.us/brian">Personal website</a>
         - Tracked <a href="/episodes/040-1000-books">every book that I've read</a> since I was 8.
         - Oldest of six, including a brother that is 24 years younger than me.
         - I'm currently craving Snyder's of Hanover Hot Buffalo Wing pretzels.
@@ -23,7 +23,7 @@ melissa:
         - 
         - 
         - 
-        - 
+        - "Favorite episode: <a href='/episodes/064-great-songs'>№ 64 Great Songs</a>"
         - 
         - 
 ---
