Fix Subscribe page mobile width (fixes #28)

--- a/css/site.css
+++ b/css/site.css
@@ -897,6 +897,10 @@ kbd kbd {
     margin-top: 3em;
 }
 
+.accordion img {
+    max-width: 85vw;
+}
+
 .tab {
     cursor: pointer;
     position: relative;
