Finish about page (fixes #14)

--- a/about.njk
+++ b/about.njk
@@ -8,24 +8,26 @@ brian:
         - Other hobbies include reading and playing modern board games.
         - <a href="https://koser.us/brian">Personal website</a>
         - Tracked <a href="/episodes/040-1000-books">every book that I've read</a> since I was 8.
-        - Oldest of six, including a brother that is 24 years younger than me.
-        - I'm currently craving Snyder's of Hanover Hot Buffalo Wing pretzels.
+        - If I ever go on the run in Mexico, my alias will be "Jorge Curioso".
         - "Favorite episode: <a href='/episodes/064-great-songs'>№ 64 Great Songs</a>"
+        - "Favorite color: <span style="color:#006b9f;font-weight:bold;">teal</span>"
         - "Favorite punctuation mark: ?"
         - "Favorite emoji: ⚗️"
 melissa:
     host: Melissa
     list:
-        - <a href="https://koser.us/melissa">Personal website</a>
-        - 
-        - 
-        - 
-        - 
-        - 
-        - 
-        - "Favorite episode: <a href='/episodes/064-great-songs'>№ 64 Great Songs</a>"
-        - 
-        - 
+        - Mother and homemaker.
+        - Hobbies include reading, board games, cooking,  and the occasional short-lived craft.
+        - I play the piano, accordion, percussion; want to learn harp.
+        - I aspire to be a writer and a masseuse, but mostly a writer.
+        - <a href="https://koser.us/melissa">I wrote some things here</a>
+        - It's been one of those lives.
+        - My hair changes between blonde, brown, and red with sun and age.
+        - I would exercise, but it's just too darn tiring.
+        - I wish coffee-scented soap tasted more like coffee.
+        - Until 2011, I had no favorite color. Brian made me pick one.
+        - "Favorite episode: <a href='/episodes/057-jokes'>№ 57 Jokes</a>"
+        - "Favorite song: <i>Chicken to Ride</i> by The Beatles"
 ---
 <h1>About</h1>
 
