Fix nested ticks

--- a/about.njk
+++ b/about.njk
@@ -10,7 +10,7 @@ brian:
         - Tracked <a href="/episodes/040-1000-books">every book that I've read</a> since I was 8.
         - If I ever go on the run in Mexico, my alias will be "Jorge Curioso".
         - "Favorite episode: <a href='/episodes/064-great-songs'>№ 64 Great Songs</a>"
-        - "Favorite color: <span style="color:#006b9f;font-weight:bold;">teal</span>"
+        - "Favorite color: <span style='color:#006b9f;font-weight:bold;'>teal</span>"
         - "Favorite punctuation mark: ?"
         - "Favorite emoji: ⚗️"
 melissa:
