--- a/index.njk
+++ b/index.njk
@@ -1,5 +1,5 @@
 ---
-layout: base
+layout: home
 ---
 
 <p class="headline">Ten to One is the podcast where Melissa and Brian Koser make top ten lists about everything.</p>
