--- a/episodes/109-movies-pre-1960.njk
+++ b/episodes/109-movies-pre-1960.njk
@@ -71,10 +71,10 @@ matt:
     - {"title": "Casablanca", "slug": "casablanca"}
 
 notes:
-  - Follow us on Letterboxd: <a href="https://letterboxd.com/mkoser/">Melissa</a>, <a href="https://letterboxd.com/bkoser/">Brian</a>, <a href="https://letterboxd.com/bendebono/">Ben</a>, <a href="https://letterboxd.com/manderson555/">Matt</a>
+  - "Follow us on Letterboxd: <a href='https://letterboxd.com/mkoser/'>Melissa</a>, <a href='https://letterboxd.com/bkoser/'>Brian</a>, <a href='https://letterboxd.com/bendebono/'>Ben</a>, <a href='https://letterboxd.com/manderson555/'>Matt</a>"
   - <a href="https://letterboxd.com/manderson555/list/top-12-favorite-movies-released-prior-to/">Matt's top 12 pre-1960 movies</a>
-  - <a href="https://xkcd.com/1485/">XKCD: Bromance</a>
-  - The clip at the end of the episode is from The Sci-Fi Christian, Episode 487: The Return of Double Dare and Other News
+  - "<a href='https://xkcd.com/1485/'>XKCD: Bromance</a>"
+  - "The clip at the end of the episode is from The Sci-Fi Christian, Episode 487: The Return of Double Dare and Other News"
 ---
 {% movieList melissa %}
 {% movieList brian %}
