--- a/episodes/032-moral-dilemmas.njk
+++ b/episodes/032-moral-dilemmas.njk
@@ -12,7 +12,8 @@ duration: '0:49:42'
 tags:
   - episodes
   - ethics
-
+  - recommended
+  
 combined:
   list:
     - <a href="https://en.m.wikipedia.org/wiki/Trolley_problem">The Trolley Problem</a>
