--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -30,7 +30,7 @@
             </ol>
             <div class="site-nav-episodes">
                 {% episodeBlock collections.episodes | last, "Latest", metadata.cdn_url %}
-                {# <div><a href="#">Recommended</a></div> #}
+                {% episodeBlock collections.recommended | last, "Recommended", metadata.cdn_url %}
             </div>
             <div class="site-nav-footer">
                 <a href="/feed.rss">{% icon 'rss' %} RSS</a>
