--- a/index.njk
+++ b/index.njk
@@ -14,7 +14,7 @@ layout: home
     <div class="section">
         <h2>Recommended</h2>
         {% episodeCard collections.recommended | last, collections.recommended | last | episodeReadableDate, collections.recommended | last | episodeMachineDate, metadata.site_url %}
-        <div class="more"><a href="/recommended">All Recommended Episodes</a> {% icon 'next' %}</div>
+        <div class="more"><a href="/recommended">All Recommended</a> {% icon 'next' %}</div>
     </div>
 </div>
 
