Fix ep 101 notes

--- a/episodes/101-new-years-resolutions-2019.njk
+++ b/episodes/101-new-years-resolutions-2019.njk
@@ -18,9 +18,9 @@ tags:
 brian:
   host: Brian
   list:
-    - Reading: finish Greek classics and “on-deck”
-    - Website projects: kodex 2.0, Ten to One and briankoser.com redesigns, sfc.blue
-    - Exercise: get to median recommended band for body fat and muscle
+    - "Reading: finish Greek classics and “on-deck”"
+    - "Website projects: kodex 2.0, Ten to One and briankoser.com redesigns, sfc.blue"
+    - "Exercise: get to median recommended band for body fat and muscle"
     - Journal
     - Finish 2019 to do list
 melissa:
