--- a/_includes/layouts/episode.njk
+++ b/_includes/layouts/episode.njk
@@ -4,7 +4,7 @@ layout: site
 <article class="post h-entry">
     <header>
         <h1 class="post-title p-name">№ {{ number }} {{ title }}</h1>
-        <time class="post-date dt-published" datetime='{{ date | machineDate }}'>{{ date | readableDate }}</time>
+        <time class="post-date dt-published" datetime='{{ date | setEpisodeReleaseTime | machineDate }}'>{{ date | setEpisodeReleaseTime | readableDate }}</time>
     </header>
     
     <div class="e-content">
