--- a/index.njk
+++ b/index.njk
@@ -7,13 +7,13 @@ layout: home
 <div class="home-episodes">
     <div class="section">
         <h2>Latest</h2>
-        {% episodeCard collections.episodes | last, collections.episodes | last | episodeReadableDate, collections.episodes | last | episodeMachineDate, metadata.site_url %}
+        {% episodeCard collections.episodes | last, collections.episodes | last | getProperty('date') | setEpisodeReleaseTime | readableDate, collections.episodes | last | getProperty('date') | setEpisodeReleaseTime | machineDate, metadata.site_url %}
         <div class="more"><a href="/episodes">All Episodes</a> {% icon 'next' %}</div>
     </div>
 
     <div class="section">
         <h2>Recommended</h2>
-        {% episodeCard collections.recommended | last, collections.recommended | last | episodeReadableDate, collections.recommended | last | episodeMachineDate, metadata.site_url %}
+        {% episodeCard collections.recommended | last, collections.recommended | last | getProperty('date') | setEpisodeReleaseTime | readableDate, collections.recommended | last | getProperty('date') | setEpisodeReleaseTime | machineDate, metadata.site_url %}
         <div class="more"><a href="/recommended">All Recommended</a> {% icon 'next' %}</div>
     </div>
 </div>
