--- a/featured.njk
+++ b/featured.njk
@@ -1,9 +1,9 @@
 ---
 layout: site
 ---
-<h1>Recommended Episodes</h1>
+<h1>Featured Episodes</h1>
 <div class="episode-list">
-{%- for episode in collections.recommended | reverse -%}
+{%- for episode in collections.featured | reverse -%}
     <article class="h-entry">
         <h2><a href="{{ episode.url }}" class="p-name">№ {{ episode.data.number }} {{ episode.data.title }}</a></h2>
         <p><time class="dt-published" datetime='{{ episode.date | setEpisodeReleaseTime | machineDate }}'>{{ episode.date | setEpisodeReleaseTime | readableDate }}</time> · {{ episode.data.description }}</p>
