--- a/episodes/117-books-2019.njk
+++ b/episodes/117-books-2019.njk
@@ -7,11 +7,11 @@ date: 2020-01-17
 hosts:
   - Brian
   - Melissa
-bytes: 47371791
-duration: '1:18:57'
+bytes: 
+duration: '1:06:55'
 tags:
   - episodes
-  - books
+  - movies
   - annual
 
 brian:
