Bug: extra char

--- a/episodes/123-pet-names.njk
+++ b/episodes/123-pet-names.njk
@@ -2,7 +2,7 @@
 layout: episode
 number: 123
 title: Pet Names
-description: "No, not cute names for each other: the best names to give a pet. Or a working animal. Or a plant. Or anything, really, who knows what will show up on this list."y
+description: "No, not cute names for each other: the best names to give a pet. Or a working animal. Or a plant. Or anything, really, who knows what will show up on this list."
 date: 2020-04-10
 hosts:
   - Brian
