Use YAML object syntax

--- a/_data/000-template.njk
+++ b/_data/000-template.njk
@@ -42,144 +42,305 @@ listMelissa:
 linkListBrian:
   host: Brian
   list:
-    - {"title": "title", "url": "url", "comment": "comment"}
-    - {"title": "title", "url": "url", "comment": "comment"}
-    - {"title": "title", "url": "url", "comment": "comment"}
-    - {"title": "title", "url": "url", "comment": "comment"}
-    - {"title": "title", "url": "url", "comment": "comment"}
-    - {"title": "title", "url": "url", "comment": "comment"}
-    - {"title": "title", "url": "url", "comment": "comment"}
-    - {"title": "title", "url": "url", "comment": "comment"}
-    - {"title": "title", "url": "url", "comment": "comment"}
-    - {"title": "title", "url": "url", "comment": "comment"}
+    - title: 
+      url: 
+      comment: 
+    - title: 
+      url: 
+      comment: 
+    - title: 
+      url: 
+      comment: 
+    - title: 
+      url: 
+      comment: 
+    - title: 
+      url: 
+      comment: 
+    - title: 
+      url: 
+      comment: 
+    - title: 
+      url: 
+      comment: 
+    - title: 
+      url: 
+      comment: 
+    - title: 
+      url: 
+      comment: 
+    - title: 
+      url: 
+      comment: 
 linkListMelissa:
   host: Melissa
   list:
-    - {"title": "title", "url": "url", "comment": "comment"}
-    - {"title": "title", "url": "url", "comment": "comment"}
-    - {"title": "title", "url": "url", "comment": "comment"}
-    - {"title": "title", "url": "url", "comment": "comment"}
-    - {"title": "title", "url": "url", "comment": "comment"}
-    - {"title": "title", "url": "url", "comment": "comment"}
-    - {"title": "title", "url": "url", "comment": "comment"}
-    - {"title": "title", "url": "url", "comment": "comment"}
-    - {"title": "title", "url": "url", "comment": "comment"}
-    - {"title": "title", "url": "url", "comment": "comment"}
+    - title: 
+      url: 
+      comment: 
+    - title: 
+      url: 
+      comment: 
+    - title: 
+      url: 
+      comment: 
+    - title: 
+      url: 
+      comment: 
+    - title: 
+      url: 
+      comment: 
+    - title: 
+      url: 
+      comment: 
+    - title: 
+      url: 
+      comment: 
+    - title: 
+      url: 
+      comment: 
+    - title: 
+      url: 
+      comment: 
+    - title: 
+      url: 
+      comment: 
 
 boardGameBrian:
   host: Brian
   list:
-    - {"title": "title", "id": "bggGameId"}
-    - {"title": "title", "id": "bggGameId"}
-    - {"title": "title", "id": "bggGameId"}
-    - {"title": "title", "id": "bggGameId"}
-    - {"title": "title", "id": "bggGameId"}
-    - {"title": "title", "id": "bggGameId"}
-    - {"title": "title", "id": "bggGameId"}
-    - {"title": "title", "id": "bggGameId"}
-    - {"title": "title", "id": "bggGameId"}
-    - {"title": "title", "id": "bggGameId"}
+    - title: 
+      id: 
+    - title: 
+      id: 
+    - title: 
+      id: 
+    - title: 
+      id: 
+    - title: 
+      id: 
+    - title: 
+      id: 
+    - title: 
+      id: 
+    - title: 
+      id: 
+    - title: 
+      id: 
+    - title: 
+      id: 
 boardGameMelissa:
   host: Melissa
   list:
-    - {"title": "title", "id": "bggGameId"}
-    - {"title": "title", "id": "bggGameId"}
-    - {"title": "title", "id": "bggGameId"}
-    - {"title": "title", "id": "bggGameId"}
-    - {"title": "title", "id": "bggGameId"}
-    - {"title": "title", "id": "bggGameId"}
-    - {"title": "title", "id": "bggGameId"}
-    - {"title": "title", "id": "bggGameId"}
-    - {"title": "title", "id": "bggGameId"}
-    - {"title": "title", "id": "bggGameId"}
+    - title: 
+      id: 
+    - title: 
+      id: 
+    - title: 
+      id: 
+    - title: 
+      id: 
+    - title: 
+      id: 
+    - title: 
+      id: 
+    - title: 
+      id: 
+    - title: 
+      id: 
+    - title: 
+      id: 
+    - title: 
+      id: 
 
 bookBrian:
   host: Brian
   list:
-    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
-    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
-    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
-    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
-    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
-    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
-    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
-    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
-    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
-    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
+    - title: 
+      review: goodreadsReviewId
+      book: goodreadsBookId
+    - title: 
+      review: goodreadsReviewId
+      book: goodreadsBookId
+    - title: 
+      review: goodreadsReviewId
+      book: goodreadsBookId
+    - title: 
+      review: goodreadsReviewId
+      book: goodreadsBookId
+    - title: 
+      review: goodreadsReviewId
+      book: goodreadsBookId
+    - title: 
+      review: goodreadsReviewId
+      book: goodreadsBookId
+    - title: 
+      review: goodreadsReviewId
+      book: goodreadsBookId
+    - title: 
+      review: goodreadsReviewId
+      book: goodreadsBookId
+    - title: 
+      review: goodreadsReviewId
+      book: goodreadsBookId
+    - title: 
+      review: goodreadsReviewId
+      book: goodreadsBookId
 bookMelissa:
   host: Melissa
   list:
-    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
-    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
-    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
-    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
-    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
-    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
-    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
-    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
-    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
-    - {"title": "title", "review": "goodreadsReviewId", "book": "goodreadsBookId"}
+    - title: 
+      review: goodreadsReviewId
+      book: goodreadsBookId
+    - title: 
+      review: goodreadsReviewId
+      book: goodreadsBookId
+    - title: 
+      review: goodreadsReviewId
+      book: goodreadsBookId
+    - title: 
+      review: goodreadsReviewId
+      book: goodreadsBookId
+    - title: 
+      review: goodreadsReviewId
+      book: goodreadsBookId
+    - title: 
+      review: goodreadsReviewId
+      book: goodreadsBookId
+    - title: 
+      review: goodreadsReviewId
+      book: goodreadsBookId
+    - title: 
+      review: goodreadsReviewId
+      book: goodreadsBookId
+    - title: 
+      review: goodreadsReviewId
+      book: goodreadsBookId
+    - title: 
+      review: goodreadsReviewId
+      book: goodreadsBookId
 
 movieBrian:
   host: Brian
   list:
-    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
-    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
-    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
-    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
-    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
-    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
-    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
-    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
-    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
-    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
+    - character: 
+      title: 
+      slug: letterboxdSlug
+    - character: 
+      title: 
+      slug: letterboxdSlug
+    - character: 
+      title: 
+      slug: letterboxdSlug
+    - character: 
+      title: 
+      slug: letterboxdSlug
+    - character: 
+      title: 
+      slug: letterboxdSlug
+    - character: 
+      title: 
+      slug: letterboxdSlug
+    - character: 
+      title: 
+      slug: letterboxdSlug
+    - character: 
+      title: 
+      slug: letterboxdSlug
+    - character: 
+      title: 
+      slug: letterboxdSlug
+    - character: 
+      title: 
+      slug: letterboxdSlug
 movieMelissa:
   host: Melissa
   list:
-    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
-    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
-    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
-    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
-    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
-    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
-    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
-    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
-    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
-    - {"character": "character", "title": "title", "slug": "letterboxdSlug"}
+    - character: 
+      title: 
+      slug: letterboxdSlug
+    - character: 
+      title: 
+      slug: letterboxdSlug
+    - character: 
+      title: 
+      slug: letterboxdSlug
+    - character: 
+      title: 
+      slug: letterboxdSlug
+    - character: 
+      title: 
+      slug: letterboxdSlug
+    - character: 
+      title: 
+      slug: letterboxdSlug
+    - character: 
+      title: 
+      slug: letterboxdSlug
+    - character: 
+      title: 
+      slug: letterboxdSlug
+    - character: 
+      title: 
+      slug: letterboxdSlug
+    - character: 
+      title: 
+      slug: letterboxdSlug
 
 youtubeBrian:
   host: Brian
   list:
-    - {"title": "title", "id": "youtubeVideoId"}
-    - {"title": "title", "id": "youtubeVideoId"}
-    - {"title": "title", "id": "youtubeVideoId"}
-    - {"title": "title", "id": "youtubeVideoId"}
-    - {"title": "title", "id": "youtubeVideoId"}
-    - {"title": "title", "id": "youtubeVideoId"}
-    - {"title": "title", "id": "youtubeVideoId"}
-    - {"title": "title", "id": "youtubeVideoId"}
-    - {"title": "title", "id": "youtubeVideoId"}
-    - {"title": "title", "id": "youtubeVideoId"}
+    - title: 
+      id: youtubeVideoId
+    - title: 
+      id: youtubeVideoId
+    - title: 
+      id: youtubeVideoId
+    - title: 
+      id: youtubeVideoId
+    - title: 
+      id: youtubeVideoId
+    - title: 
+      id: youtubeVideoId
+    - title: 
+      id: youtubeVideoId
+    - title: 
+      id: youtubeVideoId
+    - title: 
+      id: youtubeVideoId
+    - title: 
+      id: youtubeVideoId
   playlistID: youtubePlaylistId
 youtubeMelissa:
   host: Melissa
   list:
-    - {"title": "title", "id": "youtubeVideoId"}
-    - {"title": "title", "id": "youtubeVideoId"}
-    - {"title": "title", "id": "youtubeVideoId"}
-    - {"title": "title", "id": "youtubeVideoId"}
-    - {"title": "title", "id": "youtubeVideoId"}
-    - {"title": "title", "id": "youtubeVideoId"}
-    - {"title": "title", "id": "youtubeVideoId"}
-    - {"title": "title", "id": "youtubeVideoId"}
-    - {"title": "title", "id": "youtubeVideoId"}
-    - {"title": "title", "id": "youtubeVideoId"}
+    - title: 
+      id: youtubeVideoId
+    - title: 
+      id: youtubeVideoId
+    - title: 
+      id: youtubeVideoId
+    - title: 
+      id: youtubeVideoId
+    - title: 
+      id: youtubeVideoId
+    - title: 
+      id: youtubeVideoId
+    - title: 
+      id: youtubeVideoId
+    - title: 
+      id: youtubeVideoId
+    - title: 
+      id: youtubeVideoId
+    - title: 
+      id: youtubeVideoId
   playlistID: youtubePlaylistId
 
 notes:
   - note
 youtubeNotes:
-  - {"id": "youtubeVideoId", "caption": "caption"}
+  - id: youtubeVideoId
+    caption: 
 ---
 {% list melissa %}
 {% list brian %}
